Minor project upgrade to build on Java 8/11/12/13ea Testing UseShenandoahGC GC Testing with jmc/zmc, flight recorder features Adding triggers/alerts on Demo